syntax = "proto3";
option csharp_namespace = "Common";

option java_package = "catgirl.kirara.moe";

import "AbilityEmbryo.proto";

// Name: AKFKOGCMMAF
message AbilityControlBlock {
    repeated AbilityEmbryo ability_embryo_list = 1;
}

