syntax = "proto3";
option csharp_namespace = "Common.Protobuf";

message AbilityInvokeEntryHead {
	int32 local_id = 4;
	uint32 server_buff_uid = 6;
	uint32 instanced_modifier_id = 5;
	int32 modifier_config_local_id = 1;
	uint32 instanced_ability_id = 9;
	uint32 target_id = 11;
	bool is_serverbuff_modifier = 15;
}
