syntax = "proto3";
option csharp_namespace = "Common.Protobuf";

import "ModifierProperty.proto";
import "AbilityAttachedModifier.proto";
import "ModifierAction.proto";
import "AbilityString.proto";

message AbilityMetaModifierChange {
	repeated ModifierProperty properties = 7;
	AbilityAttachedModifier attached_instanced_modifier = 5;
	int32 modifier_local_id = 15;
	ModifierAction action = 10;
	AbilityString parent_ability_override = 14;
	AbilityString parent_ability_name = 3;
	bool AEEGGDODHLJ = 9;
	bool is_attached_parent_ability = 8;
	bool LABPDBJOIJG = 13;
	uint32 apply_entity_id = 11;
	uint32 server_buff_uid = 12;
}
