syntax = "proto3";
option csharp_namespace = "Common.Protobuf";

message AbilityMetaTriggerElementReaction {
	uint32 trigger_entity_id = 7;
	int32 hit_index = 12;
	uint32 element_reactor_type = 4;
	uint32 element_reaction_type = 5;
	uint32 element_source_type = 9;
}
