syntax = "proto3";

option csharp_namespace = "Common.Protobuf";


// Name: LGGNFLPNPII
message ShortAbilityHashPair {
    sfixed32 ability_name_hash = 4;
    sfixed32 ability_config_hash = 5;
}

